Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 <body>
 
-<h2>Withdraw EcoCash Gifts</h2>
+<h2>Withdraw MoMo Gifts</h2>
 
 <img src="eco.jpg.jpg" class="logo">
 
@@ -236,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
