--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   button {
     width: 100%;
     padding: 12px;
-    background: mediumSeaBlue;
+    background: mediumseagreen;
     color: white;
     border: none;
     border-radius: 5px;
@@ -236,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
